# MessyBsp

./: .gitignore  Bsp.cpp  Bsp.hpp  BspBrushToMesh.cpp  BspBrushToMesh.hpp  CMakeLists.txt  GLDebug.hpp  Geometry.hpp  Matrix3x3Maths.hpp  Matrix4x4Maths.hpp  Plane.hpp  PlaneMaths.hpp  Q3Loader.cpp  Q3Loader.h  Q3Loader_Test.cpp  QuaternionMaths.hpp  README.md  Trace.cpp  Trace.hpp  TraceTest.cpp  TraceTest.hpp  Vec3.hpp  VectorMaths3.hpp  VectorMaths4.hpp  main.cpp  rAssert.cpp  rAssert.hpp
docs/: DevMaster.net - Quake 3 BSP Collision Detection.html  section6.txt
test/: TestBspBrushToMesh.cpp
